--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,23 @@
+@font-face {
+  font-family: Bahnschrift;
+  src: url("../fonts/BAHNSCHRIFT.TTF");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Bahnschrift;
+  src: url("../fonts/BAHNSCHRIFT\ 10.TTF");
+  font-weight: 700;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Bahnschrift", sans-serif;
+  overflow-x: hidden;
 }
 img {
   max-width: 100%;
@@ -32,11 +45,23 @@ img {
   text-transform: uppercase;
   list-style: none;
 }
+.nav_item {
+  cursor: pointer;
+}
+.nav_item a,
+.mobile_menu_item a {
+  color: #fff;
+  text-decoration: none;
+}
+.nav_item a:hover {
+  color: #c86163;
+}
 .nav_item:not(:last-child) {
-  margin-right: 20px;
+  margin-right: 60px;
 }
 .hamburger {
   display: none;
+  cursor: pointer;
 }
 .banner {
   background-color: #f3b815;
@@ -53,7 +78,8 @@ img {
 .about_heading {
   text-transform: uppercase;
 }
-.about_heading_top, .about_heading_bottom {
+.about_heading_top,
+.about_heading_bottom {
   display: block;
 }
 .about_heading img {
@@ -103,36 +129,52 @@ img {
   display: flex;
   justify-content: space-between;
   margin-top: 70px;
+  position: relative;
+  /* padding-right: 385px; */
+}
+.conditions_work_inner {
+  display: flex;
+  justify-content: flex-end;
 }
 .conditions_work_img {
   position: absolute;
   left: 0;
-  bottom: 110px;
-  max-width: 45%;
+  max-width: 60%;
+}
+.conditions_work_item_wrapper {
+  display: flex;
+  align-items: flex-start;
+  transform: translateX(-42px);
+  margin-top: 40px;
+}
+.conditions_work_item_wrapper img {
+  height: 100%;
+  transform: translateY(5px);
 }
 .conditions_work_item {
-  margin-top: 45px;
+  margin-left: 20px;
 }
 .conditions_work_heading {
-  font-size: 30px;
+  font-size: 48px;
   color: #c86163;
   text-transform: uppercase;
 }
 .conditions_work_list {
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 26px;
+  list-style: none;
+  width: 50%;
 }
 .warning {
   text-align: center;
   color: #c86163;
   font-size: 24px;
-  margin-top: 80px;
+  margin-top: 50px;
 }
 .portfolio {
   background-color: #f3b815;
   color: #fff;
   text-align: center;
-  padding: 50px 0 0 0;
+  padding: 50px 0 80px 0;
 }
 .portfolio_heading {
   text-transform: uppercase;
@@ -145,9 +187,9 @@ img {
 .portfolio_start_icon {
   margin: 45px 0;
 }
-.gallery {
+/* .gallery {
   height: 230vh;
-}
+} */
 .gallery img {
   width: 100%;
 }
@@ -155,8 +197,7 @@ img {
   margin-bottom: 15px;
 }
 .portfolio_logos {
-  margin-top: 300px;
-  padding: 50px 0 100px 0;
+  padding: 50px 0 50px 0;
   background-color: #fff;
 }
 .portfolio_logos img {
@@ -180,11 +221,101 @@ img {
   color: #fff;
   text-decoration: none;
 }
+.mobile_menu {
+  display: flex;
+  position: fixed;
+  z-index: 99;
+  right: -100%;
+  top: 0;
+  height: 100%;
+  width: 85%;
+  background-color: #000;
+  color: #c86163;
+  transition: all 0.2s;
+}
+.close {
+  position: absolute;
+  height: auto;
+  width: 20px;
+  top: 30px;
+  left: 30px;
+  cursor: pointer;
+}
+.mobile_menu_list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  list-style: none;
+  margin: auto auto;
+  width: 80%;
+  height: 80%;
+}
+.mobile_menu_item {
+  text-transform: uppercase;
+  font-size: 26px;
+  padding: 15px 0 15px 15px;
+  text-align: right;
+}
+.mobile_menu_item:hover {
+  cursor: pointer;
+  border-bottom: 1px solid #f3b815;
+}
+.mobile_contacts {
+  color: #f3b815;
+  font-size: 18px;
+}
+.mobile_contacts:hover {
+  border-bottom: none;
+}
+.mobile_contacts p {
+  margin-bottom: 20px;
+}
+.mobile_tel {
+  color: #f3b815;
+}
+.mobile_tel:hover {
+  color: #c86163;
+}
+.visible {
+  right: 0;
+}
+.top {
+  display: none;
+  position: fixed;
+  right: 70px;
+  bottom: 70px;
+}
+.topShow {
+  display: block;
+}
+.top_arrow {
+  height: 50px;
+  width: 50px;
+  fill: #c86163;
+}
+.header_fixed {
+  position: fixed;
+  z-index: 98;
+  width: 100%;
+  transition: all 0.3s;
+}
 
+@media screen and (max-width: 1740px) {
+  .conditions_work_img {
+    max-width: 42%;
+  }
+}
 
-@media screen and (max-width: 1200px) {
-  .gallery {
-    height: 190vh;
+@media screen and (max-width: 1400px) {
+  .conditions_work_img {
+    top: 60px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .conditions_work_img {
+    top: 80px;
   }
 }
 
@@ -198,31 +329,146 @@ img {
   .about_head {
     font-size: 60px;
   }
+  .portfolio {
+    padding-bottom: 50px;
+  }
   .portfolio_heading {
     font-size: 70px;
   }
-  .portfolio_logos {
-    margin-top: 190px;
+  .conditions_work_list {
+    width: 100%;
+    margin-top: 320px;
   }
-  .gallery {
-    height: 140vh;
+  .conditions_work_item_wrapper {
+    transform: translateX(0);
+  }
+  .conditions_work_img {
+    top: -40px;
+    max-width: 88%;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .portfolio_logos {
-    margin-top: 130px;
+  .conditions_work_list {
+    margin-top: 240px;
   }
-  .gallery {
-    height: 107vh;
+  .portfolio_heading {
+    font-size: 55px;
+  }
+  .about_head {
+    font-size: 50px;
+  }
+  .conditions {
+    padding-top: 50px;
+  }
+  .conditions_heading {
+    font-size: 70px;
+  }
+  .conditions_text {
+    margin-top: 20px;
+  }
+  .conditions_work_heading {
+    font-size: 36px;
+  }
+  .top {
+    right: 20px;
+    bottom: 20px;
+  }
+  .top_arrow {
+    height: 30px;
+    width: 30px;
+  }
+  .header {
+    padding: 10px 0;
+  }
+}
+
+@media screen and (max-width: 669px) {
+  .conditions_work_list {
+    margin-top: 220px;
+  }
+  .portfolio_heading {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  .portfolio_text {
+    font-size: 22px;
+  }
+  .about {
+    padding: 50px 0;
+  }
+  .about_banner {
+    padding-top: 70px;
+  }
+  .about_head {
+    font-size: 32px;
+  }
+  .about_heading img {
+    width: 50px;
+    margin-left: 10px;
+  }
+  .about_text_paragraph {
+    font-size: 20px;
+  }
+  .conditions_text {
+    font-size: 20px;
+  }
+  .conditions {
+    padding-top: 50px;
+  }
+  .conditions_heading {
+    font-size: 49px;
+  }
+  .conditions_text {
+    margin-top: 20px;
+  }
+  .conditions_work_heading {
+    font-size: 36px;
+  }
+  .conditions_work_item {
+    font-size: 22px;
+  }
+  .warning {
+    font-size: 20px;
+  }
+  .footer {
+    font-size: 25px;
+  }
+  .mail {
+    font-size: 27px;
   }
 }
 
 @media screen and (max-width: 560px) {
-  .gallery {
-    height: 107vh;
+  .conditions_work_list {
+    margin-top: 180px;
   }
 }
 
+@media screen and (max-width: 500px) {
+  .conditions_work_list {
+    margin-top: 160px;
+  }
+  .about_banner_price_text {
+    font-size: 20px;
+  }
+}
 
-
+@media screen and (max-width: 360px) {
+  .conditions_work_heading {
+    font-size: 28px;
+  }
+  .conditions_work_item {
+    font-size: 20px;
+  }
+  .about_banner_price_text {
+    font-size: 16px;
+  }
+  .mobile_menu_item {
+    font-size: 20px;
+    padding: 5px 0 5px 5px;
+  }
+  .mobile_contacts {
+    font-size: 14px;
+  }
+}
